--- a/src/app/modules/login/pages/login/login.component.html
+++ b/src/app/modules/login/pages/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="w-100 mt-5 d-flex justify-content-center">
+  <div class="card">
+    <div class="card-header">
+      <h2>Login</h2>
+    </div>
+    <div class="card-body">
+      <form class="row g-3"
+            autocomplete="off"
+            *ngIf="formLogin"
+            [formGroup]="formLogin"
+            (ngSubmit)="startLogin()"
+      >
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email address</label>
+          <input formControlName="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
+        </div>
+        <div class="mb-3">
+          <label for="inputPassword" class="form-label">Senha</label>
+          <input formControlName="password" type="password" class="form-control" id="inputPassword" placeholder="senha">
+        </div>
+        <div class="d-flex justify-content-center">
+          <button *ngIf="!loadingLogin; else loading" [disabled]="!formLogin?.valid" type="submit" class="btn btn-primary btn-lg mb-3">Entrar</button>
+        </div>
+      </form>  </div>
+  </div>
+</div>
+
+<ng-template #loading>
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading...</span>
+  </div>
+</ng-template>
+
